@@ -10,90 +10,132 @@
 # prefix of the generated module
 name:     glint_mbal
 # f90 type containing all necessary data
-datatype: glint_mbc
+datatype: glint_instance
 # module where type is defined
-datamod:  glint_mbal_coupling
+datamod:  glint_type
 
-[snowd]
+[x0]
+dimensions:    x0
+units:         meter
+long_name:     Cartisian x-coordinate, velocity grid
+standard_name: projection_x_coordinate
+dimlen:        model%general%ewn-1
+
+[y0]
+dimensions:    y0
+units:         meter
+long_name:     Cartisian y-coordinate, velocity grid
+standard_name: projection_y_coordinate
+dimlen:        model%general%nsn-1
+
+[x1]
+dimensions:    x1
+units:         meter
+long_name:     Cartisian x-coordinate
+standard_name: projection_x_coordinate
+dimlen:        data%model%general%ewn
+
+[y1]
+dimensions:    y1
+units:         meter
+long_name:     Cartisian y-coordinate
+standard_name: projection_y_coordinate
+dimlen:        data%model%general%nsn
+
+[level]
+dimensions:    level
+units:         1
+long_name:     sigma layers
+standard_name: land_ice_sigma_coordinate
+formula_terms: sigma: level topo: topg thick: thk
+dimlen:        model%general%upn
+
+[lithoz]
+dimensions:    lithoz
+units:         meter
+long_name:     vertical coordinate of lithosphere layer
+dimlen:        model%lithot%nlayer
+
+[instant_snowd]
 dimensions:    time, y1, x1
 units:         meter
 long_name:     snow depth
-data:          data%snowd
+data:          data%mbal_accum%snowd
 coordinates:   lon lat
 
-[siced]
+[instant_siced]
 dimensions:    time, y1, x1
 units:         meter
 long_name:     superimposed ice depth
-data:          data%siced
+data:          data%mbal_accum%siced
 coordinates:   lon lat
 
 [instant_acab]
 dimensions:    time, y1, x1
 units:         meter
 long_name:     instantaneous mass-balance
-data:          data%acab
+data:          data%mbal_accum%acab
 coordinates:   lon lat
 
 [instant_ablt]
 dimensions:    time, y1, x1
 units:         meter
 long_name:     instantaneous ablation
-data:          data%ablt
+data:          data%mbal_accum%ablt
 coordinates:   lon lat
 
 [instant_prcp]
 dimensions:    time, y1, x1
 units:         meter
 long_name:     instantaneous precip
-data:          data%prcp
+data:          data%mbal_accum%prcp
 coordinates:   lon lat
 
 [instant_artm]
 dimensions:    time, y1, x1
 units:         degC
 long_name:     instantaneous air temperature
-data:          data%artm
+data:          data%mbal_accum%artm
 coordinates:   lon lat
 
 [instant_xwind]
 dimensions:    time, y1, x1
 units:         m/s
 long_name:     instantaneous x-wind 
-data:          data%xwind
+data:          data%mbal_accum%xwind
 coordinates:   lon lat
 
 [instant_ywind]
 dimensions:    time, y1, x1
 units:         m/s
 long_name:     instantaneous y-wind
-data:          data%ywind
+data:          data%mbal_accum%ywind
 coordinates:   lon lat
 
 [instant_humidity]
 dimensions:    time, y1, x1
 units:         1
 long_name:     instantaneous humidity
-data:          data%humidity
+data:          data%mbal_accum%humidity
 coordinates:   lon lat
 
 [instant_swdown]
 dimensions:    time, y1, x1
 units:         W/m^2
 long_name:     instantaneous sw down 
-data:          data%swdown
+data:          data%mbal_accum%swdown
 coordinates:   lon lat
 
 [instant_lwdown]
 dimensions:    time, y1, x1
 units:         W/m^2
 long_name:     instantaneous lw down
-data:          data%lwdown
+data:          data%mbal_accum%lwdown
 coordinates:   lon lat
 
 [instant_psurf]
 dimensions:    time, y1, x1
 units:         Pa
 long_name:     instantaneous surface pressure 
-data:          data%psurf
+data:          data%mbal_accum%psurf
 coordinates:   lon lat
