@@ -23,30 +23,14 @@ load:          1
 hot:           1
 coordinates:   lon lat
 
-[glint_acab]
-dimensions:    time, y1, x1
-units:         meter (water)/year
-long_name:     mass-balance
-standard_name: land_ice_surface_specific_mass_balance
-data:          data%acab
-coordinates:   lon lat
-
-[glint_artm]
-dimensions:    time, y1, x1
-units:         degreeC
-long_name:     air temperature
-standard_name: surface_temperature
-data:          data%artm
-coordinates:   lon lat
-
-[glint_arng]
+[arng]
 dimensions:    time, y1, x1
 units:         degreeC
 long_name:     air temperature half-range
 data:          data%arng
 coordinates:   lon lat
 
-[glint_prcp]
+[prcp]
 dimensions:    time, y1, x1
 units:         meter (water)/year
 long_name:     precipitation
@@ -54,7 +38,7 @@ data:          data%prcp
 standard_name: lwe_precipitation_rate
 coordinates:   lon lat
 
-[glint_ablt]
+[ablt]
 dimensions:    time, y1, x1
 units:         meter (water)/year
 long_name:     ablation
@@ -77,7 +61,7 @@ standard_name: surface_altitude
 data:	       data%local_orog
 coordinates:   lon lat
 
-[glint_snowd]
+[snowd]
 dimensions:    time, y1, x1
 units:         meter
 long_name:     snow depth
@@ -87,7 +71,7 @@ load:          1
 hot:           1
 coordinates:   lon lat
 
-[glint_siced]
+[siced]
 dimensions:    time, y1, x1
 units:         meter
 long_name:     superimposed ice depth
